// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`corpus: app-framework > soft metrics 1`] = `
{
  "bends": 26,
  "crossings": 10,
}
`;

exports[`corpus: assistant > soft metrics 1`] = `
{
  "bends": 17,
  "crossings": 13,
}
`;

exports[`corpus: compute > soft metrics 1`] = `
{
  "bends": 22,
  "crossings": 13,
}
`;

exports[`corpus: echo > soft metrics 1`] = `
{
  "bends": 25,
  "crossings": 6,
}
`;

exports[`corpus: edge > soft metrics 1`] = `
{
  "bends": 34,
  "crossings": 11,
}
`;

exports[`corpus: pipeline > soft metrics 1`] = `
{
  "bends": 9,
  "crossings": 0,
}
`;
